# tn-fp-haskell-course

./: .envrc  .gitignore  README.md  cabal.project  project.md  run.sh  shell.nix  tn-fp-course.cabal
.github/workflows/: actionlint.yml  ci.yaml  haskell.yml  shellcheck.yml
nix/: sources.json
project/: project-2024.md  project-2025.md
slides/: .envrc  Course01.hs  Course02.hs  Course03.hs  Course04.hs  Course05.hs  README.md  build_hs.sh  build_java.sh  check.sh  check_golden_diff.sh  course-01.html  course-01.md  course-02.html  course-02.md  course-03.html  course-03.md  course-04.html  course-04.md  course-05.html  course-05.md  extract_hs.sh  index.md  slides.cabal
tps/: README.md  Scratch.hs  TP1.hs  TP2.hs  TP3.hs  TP4.hs  TP5.hs  TP6.hs  cabal-repl.sh  check.sh  hie.yaml  tps.cabal
