cabal-version:      2.4
name:               slides
version:            0.1.0.0
synopsis:           Boilerplate to check Haskell snippets of the slides
author:             smelc
maintainer:         smelc@users.noreply.github.com
extra-source-files:

executable slides
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Course01
      Course02

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -Wall
      -Wno-name-shadowing
      -Werror
      -fno-code
      -fprof-auto
      -rtsopts
